msm8998-common: overlay: SystemUI: Do not use binned brightness sensor for proximity
Signed-off-by: NurKeinNeid <mralexman3000@gmail.com>

--- a/overlay-derp/frameworks/base/core/res/res/values/config.xml
+++ b/overlay-derp/frameworks/base/core/res/res/values/config.xml
@@ -50,4 +50,8 @@
          pulsating and RGB control would set this config to 107. -->
     <integer name="config_deviceLightCapabilities">107</integer>
 
+    <!-- Whether the binned brightness sensor reports a value of 0 on proximity
+         near events -->
+    <bool name="doze_brightness_sensor_reports_proximity">false</bool>
+
 </resources>
